--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@mui/material": "^7.3.4",
+    "@next/mdx": "^16.0.1",
+    "@types/mdx": "^2.0.13",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
