--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "@next/mdx": "^16.0.1",
     "@types/mdx": "^2.0.13",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
